--- a/index.html
+++ b/index.html
@@ -8,11 +8,36 @@
 	<title>YEZE Compiler</title>
 
 
+	<!-- Favicons -->
+	<link rel="apple-touch-icon" sizes="57x57" href="/images/favicons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/images/favicons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/images/favicons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/images/favicons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/images/favicons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/images/favicons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicons/manifest.json">
+	<meta name="msapplication-TileColor" content="#FF9800">
+	<meta name="msapplication-TileImage" content="/images/favicons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#FF9800">
+
+
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
 	<link rel="stylesheet" href="node_modules/codemirror/addon/fold/foldgutter.css">
 	<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.min.css">
+
+	<link rel="stylesheet" href="/node_modules/codemirror/theme/mdn-like.css">
+	<link rel="stylesheet" href="/node_modules/codemirror/theme/monokai.css">
+	<link rel="stylesheet" href="/node_modules/codemirror/theme/dracula.css">
+
 	<link rel="stylesheet" href="css/index.css">
 
 
@@ -28,12 +53,60 @@
 				<span id="navbar-brand-name" class="small-caps">YEZE Compiler</span>
 			</h1>
 		</md-toolbar>
+		<div id="ide-wrapper" class="md-whiteframe-4dp" layout="row" layout-margin>
+			<div id="code-wrapper" flex="70">
+				<ui-codemirror id="code-mirror-editor" ui-codemirror-opts="editorOptions" ng-model="sourceCode" ui-refresh="changed()"></ui-codemirror>
+			</div>
 
-		<div id="code-wrapper" layout="row">
-			< <textarea id="code">
-				def fib(n): if n==1: return 1 else return fib(n-1) + fib(n-2) a = [i for i in range(0, 10)] print a
-				</textarea>
+			<div id="code-editor-options" flex layout="column" layout-padding>
+				<md-input-container>
+					<label> Language </Label>
+					<md-select ng-model="selectedLanguage" ng-change="changeLanguage()" placeholder="Language">
+						<md-option ng-value="language" ng-repeat="language in languages">{{ language.title }}</md-option>
+					</md-select>
+				</md-input-container>
+
+				<md-input-container>
+					<label> Theme </Label>
+					<md-select ng-model="selectedTheme" ng-change="changeTheme()" placeholder="Theme">
+						<md-option ng-value="theme" ng-repeat="theme in themes">{{ theme.title }}</md-option>
+					</md-select>
+				</md-input-container>
+
+				<md-input-container>
+					<label> Editor </Label>
+					<md-select ng-model="selectedEditor" ng-change="changeEditor()" placeholder="Editor">
+						<md-option ng-value="editor" ng-repeat="editor in editors">{{ editor.title }}</md-option>
+					</md-select>
+				</md-input-container>
+
+				<md-input-container>
+					<label> Tab Size </Label>
+					<md-select ng-model="selectedTabSize" ng-change="changeTabSize()" placeholder="Tab Size">
+						<md-option ng-value="tabSize" ng-repeat="tabSize in tabSizes">{{ tabSize.value }}</md-option>
+					</md-select>
+				</md-input-container>
+
+				<md-button id="submit" class="md-raised md-primary" ng-click="runCode()"> Submit </md-button>
+			</div>
 		</div>
+
+		<div id="input-output-wrapper" class="md-whiteframe-4dp" layout="row" layout-margin>
+			<div id="input-wrapper" flex="50" layout="column">
+				<span class="sub-heading small-caps" class="small-caps">Input</span>
+				<md-divider></md-divider>
+				<textarea id="input-textarea" ng-model="input" flex></textarea>
+			</div>
+			<div id="output-wrapper" flex="50">
+				<span class="sub-heading small-caps" class="small-caps">Output</span>
+				<md-divider></md-divider>
+				<pre id="output-pre" ng-hide="output == null">{{output}}</pre>
+			</div>
+		</div>
+
+
+
+
 
 
 	</md-content>
@@ -44,8 +117,16 @@
 
 
 	<!-- Scripts -->
+	<script src="/node_modules/jquery//dist/jquery.min.js"></script>
 	<script src="node_modules/codemirror/lib/codemirror.js"></script>
+
+	<script src="node_modules/codemirror/mode/clike/clike.js"></script>
 	<script src="node_modules/codemirror/mode/python/python.js"></script>
+
+	<script src="node_modules/codemirror/keymap/emacs.js"></script>
+	<script src="node_modules/codemirror/keymap/sublime.js"></script>
+	<script src="node_modules/codemirror/keymap/vim.js"></script>
+
 	<script src="node_modules/codemirror/addon/edit/matchbrackets.js"></script>
 	<script src="node_modules/codemirror/addon/fold/foldcode.js"></script>
 	<script src="node_modules/codemirror/addon/fold/foldgutter.js"></script>
@@ -55,11 +136,13 @@
 	<script src="node_modules/codemirror/addon/fold/markdown-fold.js"></script>
 	<script src="node_modules/codemirror/addon/fold/comment-fold.js"></script>
 
-	<script src="/node_modules/jquery//dist/jquery.min.js"></script>
+
 	<script src="/node_modules/angular/angular.min.js" /></script>
 	<script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 	<script src="/node_modules/angular-aria/angular-aria.min.js"></script>
 	<script src="/node_modules/angular-material/angular-material.js"></script>
+	<script src="/node_modules/angular-ui-codemirror/src/ui-codemirror.js"></script>
+
 	<script src="js/index.js"></script>
 
 </body>
